--- a/src/app/dialog/create-event/create-event.component.css
+++ b/src/app/dialog/create-event/create-event.component.css
@@ -79,5 +79,15 @@
     min-width: 90px;
   }
 }
+.cancel-button {
+  color: #CD5656;
+  border-color: #CD5656;
+}
+
+.cancel-button:hover {
+  background-color: #CD5656;
+  color: white;
+}
+
 
 
