--- a/src/app/dialog/create-room/create-room.component.css
+++ b/src/app/dialog/create-room/create-room.component.css
@@ -47,5 +47,17 @@
     }
   }
 }
+.cancel-button {
+  color: #CD5656;
+  border-color: #CD5656;
+  background-color: #f9faf3;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.cancel-button:hover {
+  background-color: #CD5656;
+  color: white;
+}
+
 
 
