--- a/src/app/dialog/create-event/create-event.component.html
+++ b/src/app/dialog/create-event/create-event.component.html
@@ -3,7 +3,7 @@
     @if (eventImage) {
       <img [src]="eventImage" class="cover-img" alt="event img" />
     } @else {
-      <div class="cover-placeholder">Chưa có ảnh sự kiện</div>
+      <div class="cover-placeholder">No event image</div>
     }
     <button mat-icon-button (click)="fileInput.click()" class="upload-btn">
       <mat-icon>upload</mat-icon>
@@ -13,64 +13,70 @@
 
   <form class="form-section">
     <mat-form-field appearance="outline">
-      <mat-label>Tên sự kiện</mat-label>
+      <mat-label>Event Title</mat-label>
       <input matInput [(ngModel)]="event.title" name="title" />
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="narrow-description">
-      <mat-label>Mô tả</mat-label>
+      <mat-label>Description</mat-label>
       <input matInput rows="4" [(ngModel)]="event.description" name="description">
     </mat-form-field>
 
-
     <mat-form-field appearance="outline">
-      <mat-label>Địa điểm</mat-label>
+      <mat-label>Location</mat-label>
       <input matInput [(ngModel)]="event.location" name="location" />
     </mat-form-field>
 
     <div class="form-group">
       <mat-form-field appearance="outline">
-        <mat-label>Ngày bắt đầu</mat-label>
+        <mat-label>Start Date</mat-label>
         <input matInput [matDatepicker]="startPicker" [(ngModel)]="event.startDate" name="startDate" />
         <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
         <mat-datepicker #startPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Giờ bắt đầu</mat-label>
+        <mat-label>Start Time</mat-label>
         <input matInput type="time" [(ngModel)]="event.startTime" name="startTime" />
       </mat-form-field>
     </div>
 
     <div class="form-group">
       <mat-form-field appearance="outline">
-        <mat-label>Ngày kết thúc</mat-label>
+        <mat-label>End Date</mat-label>
         <input matInput [matDatepicker]="endPicker" [(ngModel)]="event.endDate" name="endDate" />
         <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
         <mat-datepicker #endPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Giờ kết thúc</mat-label>
+        <mat-label>End Time</mat-label>
         <input matInput type="time" [(ngModel)]="event.endTime" name="endTime" />
       </mat-form-field>
     </div>
 
     <mat-form-field appearance="outline">
-      <mat-label>Hạn đăng ký</mat-label>
-      <input matInput [matDatepicker]="regPicker" [(ngModel)]="event.registerDeadline" name="registerDeadline" />
+      <mat-label>Registration Date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="regPicker"
+        [(ngModel)]="event.registerDeadline"
+        [min]="today"
+        [max]="event.startDate"
+        name="registerDeadline"
+      />
       <mat-datepicker-toggle matSuffix [for]="regPicker"></mat-datepicker-toggle>
       <mat-datepicker #regPicker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Số người tối đa</mat-label>
+      <mat-label>Max Attendees</mat-label>
       <input matInput type="number" [(ngModel)]="event.maxAttendees" name="maxAttendees" />
     </mat-form-field>
 
     <div class="actions">
-      <button mat-stroked-button color="warn" (click)="dialogRef.close()">Hủy</button>
-      <button mat-raised-button color="primary" (click)="createEvent()">Tạo sự kiện</button>
+      <button mat-stroked-button class="cancel-button" (click)="dialogRef.close()">Cancel</button>
+      <button mat-raised-button color="primary" (click)="createEvent()">Create Event</button>
     </div>
   </form>
 </div>
