--- a/src/app/pages/admin/admin-page/admin-page.component.html
+++ b/src/app/pages/admin/admin-page/admin-page.component.html
@@ -1,14 +1,3 @@
-<!--<div class="admin-container">-->
-<!--  <app-topbar (menuClick)="toggleSidebar()"></app-topbar>-->
-
-<!--  <div class="main-wrapper">-->
-<!--    <app-sidebar [open]="sidebarOpen" [class.collapsed]="!sidebarOpen"></app-sidebar>-->
-
-<!--    <div class="main-content" [ngClass]="{ 'collapsed': !sidebarOpen }">-->
-<!--      <app-dashboard></app-dashboard>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
 <div class="admin-container">
   <app-topbar (menuClick)="toggleSidebar()"></app-topbar>
 
@@ -16,7 +5,7 @@
     <app-sidebar [open]="sidebarOpen"></app-sidebar>
 
     <div class="main-content" [ngClass]="{ 'collapsed': !sidebarOpen }">
-      <app-dashboard></app-dashboard>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
