--- a/src/app/pages/admin/management-event/management-event.component.css
+++ b/src/app/pages/admin/management-event/management-event.component.css
@@ -1,22 +1,9 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-app-topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 64px;
-}
-
-.layout-container {
-  display: flex;
-  flex-direction: row;
-  height: calc(100vh - 64px);
-  margin-top: 64px;
+.content-wrapper {
+  padding: 24px;
+  background-color: #fff;
+  min-height: calc(100vh - 64px); /* nếu topbar cao 64px */
+  box-sizing: border-box;
+  overflow-x: auto;
 }
 
 table {
@@ -82,6 +69,7 @@ td img {
   color: #333;
   width: 100%;
 }
+
 .toolbar {
   display: flex;
   justify-content: space-between;
@@ -109,6 +97,7 @@ td img {
   padding: 0 16px;
   font-weight: 500;
 }
+
 td button.mat-icon-button {
   background-color: transparent;
   border: none;
@@ -148,24 +137,4 @@ td button.mat-icon-button {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-.main-wrapper {
-  display: flex;
-}
-
-.main-content {
-  flex-grow: 1;
-  padding: 20px;
-  background-color: #f5f5f5;
-  margin-left: 200px;
-  margin-top: 64px;
-  width: calc(100% - 200px);
-  height: calc(100vh - 64px);
-  overflow-y: auto;
-  transition: all 0.3s ease;
-}
-
-.main-content.collapsed {
-  margin-left: 70px;
-  width: calc(100% - 70px);
 }
