--- a/src/app/pages/admin/management-profile/management-profile.component.html
+++ b/src/app/pages/admin/management-profile/management-profile.component.html
@@ -1,92 +1,78 @@
-<app-topbar (menuClick)="toggleSidebar()"></app-topbar>
+<div class="content-wrapper">
+  <div class="toolbar">
+    <h2>Profile User</h2>
 
-<div class="main-wrapper">
-  <app-sidebar [open]="sidebarOpen" [class.collapsed]="!sidebarOpen"></app-sidebar>
-
-  <div class="main-content" [ngClass]="{ 'collapsed': !sidebarOpen }">
-    <div class="toolbar">
-      <h2>Profile User</h2>
-
-      <div class="toolbar-actions">
-        <div class="custom-search">
-          <mat-icon class="search-icon">search</mat-icon>
-          <input
-            class="search-input"
-            [(ngModel)]="searchTerm"
-            placeholder="Search user..."
-            (input)="updatePaginator()"
-          />
-        </div>
+    <div class="toolbar-actions">
+      <div class="custom-search">
+        <mat-icon class="search-icon">search</mat-icon>
+        <input
+          class="search-input"
+          [(ngModel)]="searchTerm"
+          placeholder="Search user..."
+          (input)="updatePaginator()"
+        />
       </div>
     </div>
-
-
-
-      <table mat-table [dataSource]="pagedData" class="mat-elevation-z1" matSort>
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox
-              (change)="masterToggle()"
-              [checked]="selection.hasValue() && isAllSelected()"
-              [indeterminate]="selection.hasValue() && !isAllSelected()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox
-              (click)="$event.stopPropagation()"
-              (change)="selection.toggle(row)"
-              [checked]="selection.isSelected(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef class="col-email">User Email</th>
-          <td mat-cell *matCellDef="let row" class="col-email">{{truncateText(row.email, 30)}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef class="col-name">User Name</th>
-          <td mat-cell *matCellDef="let row" class="col-name">{{truncateText(row.name, 30)}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="joinedRooms">
-          <th mat-header-cell *matHeaderCellDef class="col-joinedRooms">Number of joined rooms</th>
-          <td mat-cell *matCellDef="let row" class="col-joinedRooms">{{ row.joinedRooms }}%</td>
-        </ng-container>
-
-        <ng-container matColumnDef="events">
-          <th mat-header-cell *matHeaderCellDef class="col-events">Events participated in</th>
-          <td mat-cell *matCellDef="let row" class="col-events">{{ row.events }}</td>
-        </ng-container>
-
-
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row">
-            <mat-slide-toggle
-              [checked]="!row.is_hidden"
-              color="primary"
-              (change)="toggleVisibility(row)">
-            </mat-slide-toggle>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row
-            *matRowDef="let row; columns: displayedColumns;"
-            [ngClass]="{ 'row-inactive': row.is_hidden }">
-        </tr>
-
-      </table>
-
-      <mat-paginator
-        [length]="filteredData.length"
-        [pageSize]="pageSize"
-        [pageIndex]="currentPageIndex"
-        [pageSizeOptions]="[1, 3, 5]"
-        (page)="onPageEvent($event)">
-      </mat-paginator>
-
   </div>
+
+  <table mat-table [dataSource]="pagedData" class="mat-elevation-z1" matSort>
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox
+          (change)="masterToggle()"
+          [checked]="selection.hasValue() && isAllSelected()"
+          [indeterminate]="selection.hasValue() && !isAllSelected()">
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox
+          (click)="$event.stopPropagation()"
+          (change)="selection.toggle(row)"
+          [checked]="selection.isSelected(row)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef class="col-email">User Email</th>
+      <td mat-cell *matCellDef="let row" class="col-email">{{truncateText(row.email, 30)}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef class="col-name">User Name</th>
+      <td mat-cell *matCellDef="let row" class="col-name">{{truncateText(row.name, 30)}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="joinedRooms">
+      <th mat-header-cell *matHeaderCellDef class="col-joinedRooms">Joined Rooms</th>
+      <td mat-cell *matCellDef="let row" class="col-joinedRooms">{{ row.joinedRooms }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="events">
+      <th mat-header-cell *matHeaderCellDef class="col-events">Events</th>
+      <td mat-cell *matCellDef="let row" class="col-events">{{ row.events }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row">
+        <mat-slide-toggle
+          [checked]="!row.is_hidden"
+          color="primary"
+          (change)="toggleVisibility(row)">
+        </mat-slide-toggle>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{ 'row-inactive': row.is_hidden }"></tr>
+  </table>
+
+  <mat-paginator
+    [length]="filteredData.length"
+    [pageSize]="pageSize"
+    [pageIndex]="currentPageIndex"
+    [pageSizeOptions]="[1, 3, 5]"
+    (page)="onPageEvent($event)">
+  </mat-paginator>
 </div>
