--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,22 +1,32 @@
 <div class="sidebar" [class.collapsed]="!open">
   <div class="sidebar-inner">
     <div class="menu-items">
-      <a *ngFor="let item of menuItems"
-         [routerLink]="item.route"
-         routerLinkActive="active"
-         [routerLinkActiveOptions]="{ exact: true }"
-         class="menu-item">
-        <mat-icon>{{ item.icon }}</mat-icon>
-        <span *ngIf="open">{{ item.label }}</span>
-      </a>
+      @for (item of menuItems; track item.route) {
+        <a
+          [routerLink]="item.route"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="menu-item"
+          [class.active]="activeItem === item.route"
+          (click)="setActive(item.route)">
+          <mat-icon>{{ item.icon }}</mat-icon>
+          @if (open) {
+            <span class="menu-text">{{ item.label }}</span>
+          }
+        </a>
+      }
     </div>
 
     <div class="bottom-menu">
-      <a class="menu-item"
-         [class.active]="activeItem === 'sign out'"
-         (click)="setActive('sign out'); handleLogout()">
-        <mat-icon>exit_to_app</mat-icon>
-        <span *ngIf="open">Sign out</span>
+      <a
+        role="button"
+        class="menu-item"
+        [class.active]="activeItem === 'sign out'"
+        (click)="setActive('sign out'); handleLogout()">
+        <mat-icon>logout</mat-icon>
+        @if (open) {
+          <span class="menu-text">Sign out</span>
+        }
       </a>
     </div>
   </div>
