--- a/src/app/pages/user/room-chat-page/room-chat-page.component.css
+++ b/src/app/pages/user/room-chat-page/room-chat-page.component.css
@@ -1,26 +1,30 @@
+
 .chat-wrapper {
   display: flex;
+  flex-direction: column;
   height: 100%;
-  Flex-direction: column;
   background-color: #f9f9f9;
 }
+
 
 :host {
   display: block;
   height: 100%;
 }
 .chat-main {
+  padding-top: 10px;
   display: flex;
   flex: 1;
   min-height: calc(100vh - 64px);
+  overflow: hidden; /* Ngăn các thành phần bên trong làm tràn */
 }
+
 
 /* Danh sách phòng chat */
 .chat-room-list {
-  width: 260px;
-  background-color: #ffffff;
+  width: 300px;
   border-right: 1px solid #e0e0e0;
-  padding: 20px;
+  padding: 0 20px;
   box-sizing: border-box;
   overflow-y: auto;
   Height: 100%;
@@ -31,6 +35,7 @@
   font-weight: 600;
   margin-bottom: 12px;
   color: #333;
+  margin-top: 10px;
 }
 
 .chat-scroll {
@@ -75,15 +80,22 @@
   color: #2e7d32;
 }
 
-.chat-info .preview {
+.preview {
   font-size: 13px;
   color: #555;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
+
 .time {
+  width: 40%;
+  display: flex;
+  justify-content: right;
   font-size: 12px;
   color: #999;
 }
