--- a/src/app/pages/user/profile-page/profile-page.component.html
+++ b/src/app/pages/user/profile-page/profile-page.component.html
@@ -7,7 +7,7 @@
         <p>{{ user.email }}</p>
       </div>
     </div>
-    <button mat-raised-button color="primary" class="edit-button">
+    <button mat-raised-button color="primary" class="edit-button" (click)="openEditProfileDialog()">
       <mat-icon>edit</mat-icon>
       Edit
     </button>
